--- a/page7.html
+++ b/page7.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-r8rlZ3JtTr" id="image4-8">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-r8rlZ3JtTr" id="image4-8">
     <!-- Block parameters controls (Blue "Gear" panel) -->
     
     <!-- End block parameters -->
