--- a/page2.html
+++ b/page2.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -84,7 +84,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="UYZPqveFe6W1iOnvU0/jdNxUaZivGdVtR21fmcKw4q6BaOkIbcB2nSpzaFKWLM4uuoIHBt/bJzpZBZ0HOaOHWH1IGGDmXwHQbTy//w+UMYOtgFVFp9BPs1+v6zgxkEB0">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rVV2t6Ww1GwOS3ihfClja7A/xBrBjn1qpeyqS0rasxVg20oC4I1SypJZ4XtI0BKhSHrPGbbheLQlyDO3fe8hiTOaKWQOHA+0hshw6Yms6huUo7N377vO3J3t10ThOgc7">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
