create github pages

--- a/keramiek.html
+++ b/keramiek.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free site design templates</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
 
     
 
