--- a/page2.html
+++ b/page2.html
@@ -16,6 +16,7 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
+  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -63,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -84,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rVV2t6Ww1GwOS3ihfClja7A/xBrBjn1qpeyqS0rasxVg20oC4I1SypJZ4XtI0BKhSHrPGbbheLQlyDO3fe8hiTOaKWQOHA+0hshw6Yms6huUo7N377vO3J3t10ThOgc7">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gmmQc/wLBXdj4ONl04Zgn5CieNN13gHlJ/1k09H2nSkKZC4/cgcj0QfYfRkmLaFSChP/zrbiR15Yt6VK3YdAi8B2Xd1iKzrKUMnCpUu+GUVmUhUwm+tVDfEnf9yAoZtY">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
