create github pages

--- a/keramiek.html
+++ b/keramiek.html
@@ -65,7 +65,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
 
     
 
