--- a/page10.html
+++ b/page10.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo2.png" type="image/x-icon">
   <meta name="description" content="Site Generator Description">
-  <title>Illustraties</title>
+  <title>Posters</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -39,7 +39,7 @@
 <!-- /Google Analytics -->
 
 
-  <section class="menu cid-r7chOXJ0Yt" once="menu" id="menu2-5">
+  <section class="menu cid-r7chGRsfym" once="menu" id="menu2-9">
 
     
 
@@ -65,12 +65,12 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free web design templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rFujt8gq" id="gallery1-6">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9bt3F3K4o" id="gallery1-a">
 
     
 
     <div class="container">
-        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery1-6" data-slide-to="0" data-toggle="modal"><img src="assets/images/illu-3-van-1-715x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery1-6" data-slide-to="1" data-toggle="modal"><img src="assets/images/illu-1-van-1-707x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery1-6" data-slide-to="2" data-toggle="modal"><img src="assets/images/illu-2-van-1-709x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery1-6" data-slide-to="3" data-toggle="modal"><img src="assets/images/illu-4-van-1-685x1000.jpg" alt="" title=""><span class="icon-focus"></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Bewegende"><div href="#lb-gallery1-6" data-slide-to="4" data-toggle="modal"><img src="assets/images/illu-10-van-1-800x568.jpg" alt="" title=""><span class="icon-focus"></span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-6"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/illu-3-van-1.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/illu-1-van-1.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/illu-2-van-1.jpg" alt="" title=""></div><div class="carousel-item"><img src="assets/images/illu-4-van-1.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/illu-10-van-1.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-6"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-6"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
+        <div><!-- Filter --><!-- Gallery --><div class="mbr-gallery-row"><div class="mbr-gallery-layout-default"><div><div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Geweldige"><div href="#lb-gallery1-a" data-slide-to="0" data-toggle="modal"><img src="assets/images/def-affiche-800x1162.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Minima Docta 2018<br>Body and Soul - Michel Petrucciani<br></span></div></div><div class="mbr-gallery-item mbr-gallery-item--p1" data-video-url="false" data-tags="Sympathieke"><div href="#lb-gallery1-a" data-slide-to="1" data-toggle="modal"><img src="assets/images/defaffiche3-800x1162.jpg" alt="" title=""><span class="icon-focus"></span><span class="mbr-gallery-title mbr-fonts-style display-7">Minima Docta 2018<br>Between the Fiction and Me</span></div></div></div></div><div class="clearfix"></div></div></div><!-- Lightbox --><div data-app-prevent-settings="" class="mbr-slider modal fade carousel slide" tabindex="-1" data-keyboard="true" data-interval="false" id="lb-gallery1-a"><div class="modal-dialog"><div class="modal-content"><div class="modal-body"><div class="carousel-inner"><div class="carousel-item"><img src="assets/images/def-affiche.jpg" alt="" title=""></div><div class="carousel-item active"><img src="assets/images/defaffiche3.jpg" alt="" title=""></div></div><a class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#lb-gallery1-a"><span class="mbri-left mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Previous</span></a><a class="carousel-control carousel-control-next" role="button" data-slide="next" href="#lb-gallery1-a"><span class="mbri-right mbr-iconfont" aria-hidden="true"></span><span class="sr-only">Next</span></a><a class="close" href="#" role="button" data-dismiss="modal"><span class="sr-only">Close</span></a></div></div></div></div></div>
     </div>
 
 </section>
