--- a/page2.html
+++ b/page2.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create a site</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="gmmQc/wLBXdj4ONl04Zgn5CieNN13gHlJ/1k09H2nSkKZC4/cgcj0QfYfRkmLaFSChP/zrbiR15Yt6VK3YdAi8B2Xd1iKzrKUMnCpUu+GUVmUhUwm+tVDfEnf9yAoZtY">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="0aLMmhXuz9/MHo8ffZofDcjd4IKu919nUrSrX3Iq+hJpVRsetgawLBN4X4e30t8P3AaiEWbmlGB1VOfLyinWrACMpSev5ypH786xAYz26mIgFi2pQAYFNUxpDtrzoRJU">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
