--- a/page8.html
+++ b/page8.html
@@ -59,13 +59,13 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page3.html" aria-expanded="false">Grafisch ontwerp</a></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page4.html" aria-expanded="false">Grafiek</a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="keramiek.html">Keramiek</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="page5.html" data-toggle="dropdown-submenu" aria-expanded="false">Over mij</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page5.html">Biografie<br></a><a class="text-black dropdown-item display-4" href="page2.html" aria-expanded="false">Contact</a></div></li></ul>
+            <ul class="navbar-nav nav-dropdown nav-right navbar-nav-top-padding" data-app-modern-menu="true"><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page3.html" aria-expanded="false">GRAFISCH ONTWERP</a></li><li class="nav-item dropdown"><a class="nav-link link text-black display-4" href="page4.html" aria-expanded="false">GRAFIEK<br></a></li><li class="nav-item"><a class="nav-link link text-black display-4" href="keramiek.html">KERAMIEK</a></li><li class="nav-item dropdown"><a class="nav-link link text-black dropdown-toggle display-4" href="page5.html" data-toggle="dropdown-submenu" aria-expanded="false">OVER MIJ</a><div class="dropdown-menu"><a class="text-black dropdown-item display-4" href="page5.html">Biografie<br></a><a class="text-black dropdown-item display-4" href="page2.html" aria-expanded="false">Contact<br></a></div></li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">free web maker</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
+<section class="engine"><a href="https://mobirise.info/z">best html templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r8rnxkn1AH" id="gallery1-a">
 
     
 
