create github pages

--- a/page2.html
+++ b/page2.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own site</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +85,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Eg7Hf1Oa3Nezjn8xp8LvZ9d7xOQjbiEPJtwZi+pBoZSynGoNcTkzaL6g+n2i1ClaUIzrh3ne0D0winx6gm/EWU0h22Uv1Pbpbyyoz08TqKQAH9xEoGGnxXdpKf9jZ5Cz">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3aijC6YEJsfFrA4ET9Lqp7QjqTySBFZOy3YjEVJVEMVxLPvneFEGNShwD0jX5iwlNaiCJeiHL4X6fYeYqSKsvXzARLby1PXBWEDAcPL9tD7rhwjGA9fV319Xu3xd2D6v">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
