--- a/keramiek.html
+++ b/keramiek.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -65,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
+<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-r5dur9LoPj" id="header1-1">
 
     
 
