--- a/page10.html
+++ b/page10.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -65,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">site builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9bt3F3K4o" id="gallery1-a">
+<section class="engine"><a href="https://mobirise.info/i">site creation software</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9bt3F3K4o" id="gallery1-a">
 
     
 
