--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,6 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -64,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/d">web maker</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
+<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="mbr-section form1 cid-r5SCUxAPJk" id="form1-5">
 
     
 
@@ -85,7 +84,7 @@
                         Bedankt om het formulier in te vullen!
                     </div>
             
-                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="3aijC6YEJsfFrA4ET9Lqp7QjqTySBFZOy3YjEVJVEMVxLPvneFEGNShwD0jX5iwlNaiCJeiHL4X6fYeYqSKsvXzARLby1PXBWEDAcPL9tD7rhwjGA9fV319Xu3xd2D6v">
+                    <form class="mbr-form" action="https://mobirise.com/" method="post" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="o8rsYqnocH69beKu9ont7jC2tSo1Kt6e2b/IUIfYFATn34PJ3jddD6Kx6HKq//Y9ugCN+eSjh8EubOYA32zrTCI9vHmI7/NtlAgrw29PcRxwVgFeS/CdVL8zKZnHeVLs">
                         <div class="row row-sm-offset">
                             <div class="col-md-4 multi-horizontal" data-for="name">
                                 <div class="form-group">
