--- a/page7.html
+++ b/page7.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/gallery/style.css">
-  <link href="assets/fonts/style.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
@@ -65,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap responsive templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9be63Hxfg" id="gallery3-7">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-gallery mbr-slider-carousel cid-r9be63Hxfg" id="gallery3-7">
 
     
 
